[gd_scene load_steps=5 format=3 uid="uid://b3d1pxu4egw5v"]

[ext_resource type="Script" uid="uid://ujnhaq304agh" path="res://main_scene.gd" id="1_cwrvp"]
[ext_resource type="PackedScene" uid="uid://dg2g2kah64oho" path="res://gpu.tscn" id="2_7c6xg"]
[ext_resource type="PackedScene" uid="uid://dv204hytlemsn" path="res://computer_part.tscn" id="3_w4yxw"]
[ext_resource type="PackedScene" uid="uid://m3hr0warc8gt" path="res://virus.tscn" id="4_4w7vw"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_cwrvp")

[node name="FallingObjectsContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="FallingObjectsContainer"]
wait_time = 0.5
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="scorelabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="GameOverLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="RestartButton" type="Button" parent="UI"]
visible = false
offset_right = 8.0
offset_bottom = 8.0
text = "restart"

[node name="GPU" parent="." instance=ExtResource("2_7c6xg")]

[node name="ComputerPart" parent="GPU" instance=ExtResource("3_w4yxw")]

[node name="virus" parent="GPU/ComputerPart" instance=ExtResource("4_4w7vw")]
